Projeto_Compilador/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    DOWNTO
    MODOP

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMI declarations compound_stmt DOT
Rule 2     program -> PROGRAM ID SEMI compound_stmt DOT
Rule 3     declarations -> VAR var_decl_list
Rule 4     declarations -> empty
Rule 5     var_decl_list -> var_decl SEMI
Rule 6     var_decl_list -> var_decl SEMI var_decl_list
Rule 7     var_decl -> id_list COLON type
Rule 8     id_list -> ID
Rule 9     id_list -> ID COMMA id_list
Rule 10    type -> INTEGER
Rule 11    type -> BOOLEAN
Rule 12    compound_stmt -> BEGIN stmt_list END
Rule 13    stmt_list -> stmt
Rule 14    stmt_list -> stmt SEMI stmt_list
Rule 15    stmt -> assignment
Rule 16    stmt -> if_stmt
Rule 17    stmt -> while_stmt
Rule 18    stmt -> for_stmt
Rule 19    stmt -> readln_stmt
Rule 20    stmt -> writeln_stmt
Rule 21    stmt -> compound_stmt
Rule 22    stmt -> empty
Rule 23    assignment -> ID ASSIGN expr
Rule 24    if_stmt -> IF expr THEN stmt
Rule 25    if_stmt -> IF expr THEN stmt ELSE stmt
Rule 26    while_stmt -> WHILE expr DO stmt
Rule 27    for_stmt -> FOR ID ASSIGN expr TO expr DO stmt
Rule 28    readln_stmt -> READLN LPAREN ID RPAREN
Rule 29    writeln_stmt -> WRITELN LPAREN writeln_args RPAREN
Rule 30    writeln_stmt -> WRITE LPAREN writeln_args RPAREN
Rule 31    writeln_stmt -> WRITELN LPAREN RPAREN
Rule 32    writeln_stmt -> WRITE LPAREN RPAREN
Rule 33    writeln_args -> arg
Rule 34    writeln_args -> arg COMMA writeln_args
Rule 35    arg -> expr
Rule 36    arg -> STRING
Rule 37    expr -> simple_expr
Rule 38    expr -> simple_expr relop simple_expr
Rule 39    relop -> EQUAL
Rule 40    relop -> NOTEQUAL
Rule 41    relop -> LT
Rule 42    relop -> GT
Rule 43    relop -> LE
Rule 44    relop -> GE
Rule 45    simple_expr -> term
Rule 46    simple_expr -> simple_expr addop term
Rule 47    addop -> PLUS
Rule 48    addop -> MINUS
Rule 49    addop -> OR
Rule 50    term -> factor
Rule 51    term -> term mulop factor
Rule 52    mulop -> TIMES
Rule 53    mulop -> DIVIDE
Rule 54    mulop -> DIV
Rule 55    mulop -> MOD
Rule 56    mulop -> AND
Rule 57    factor -> ID
Rule 58    factor -> NUMBER
Rule 59    factor -> LPAREN expr RPAREN
Rule 60    factor -> NOT factor
Rule 61    factor -> TRUE
Rule 62    factor -> FALSE
Rule 63    factor -> MINUS factor
Rule 64    empty -> <empty>

Terminals, with rules where they appear

AND                  : 56
ASSIGN               : 23 27
BEGIN                : 12
BOOLEAN              : 11
COLON                : 7
COMMA                : 9 34
COMMENT              : 
DIV                  : 54
DIVIDE               : 53
DO                   : 26 27
DOT                  : 1 2
DOWNTO               : 
ELSE                 : 25
END                  : 12
EQUAL                : 39
FALSE                : 62
FOR                  : 27
GE                   : 44
GT                   : 42
ID                   : 1 2 8 9 23 27 28 57
IF                   : 24 25
INTEGER              : 10
LE                   : 43
LPAREN               : 28 29 30 31 32 59
LT                   : 41
MINUS                : 48 63
MOD                  : 55
MODOP                : 
NOT                  : 60
NOTEQUAL             : 40
NUMBER               : 58
OR                   : 49
PLUS                 : 47
PROGRAM              : 1 2
READLN               : 28
RPAREN               : 28 29 30 31 32 59
SEMI                 : 1 2 5 6 14
STRING               : 36
THEN                 : 24 25
TIMES                : 52
TO                   : 27
TRUE                 : 61
VAR                  : 3
WHILE                : 26
WRITE                : 30 32
WRITELN              : 29 31
error                : 

Nonterminals, with rules where they appear

addop                : 46
arg                  : 33 34
assignment           : 15
compound_stmt        : 1 2 21
declarations         : 1
empty                : 4 22
expr                 : 23 24 25 26 27 27 35 59
factor               : 50 51 60 63
for_stmt             : 18
id_list              : 7 9
if_stmt              : 16
mulop                : 51
program              : 0
readln_stmt          : 19
relop                : 38
simple_expr          : 37 38 38 46
stmt                 : 13 14 24 25 25 26 27
stmt_list            : 12 14
term                 : 45 46 51
type                 : 7
var_decl             : 5 6
var_decl_list        : 3 6
while_stmt           : 17
writeln_args         : 29 30 34
writeln_stmt         : 20

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMI declarations compound_stmt DOT
    (2) program -> . PROGRAM ID SEMI compound_stmt DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMI declarations compound_stmt DOT
    (2) program -> PROGRAM . ID SEMI compound_stmt DOT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMI declarations compound_stmt DOT
    (2) program -> PROGRAM ID . SEMI compound_stmt DOT

    SEMI            shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMI . declarations compound_stmt DOT
    (2) program -> PROGRAM ID SEMI . compound_stmt DOT
    (3) declarations -> . VAR var_decl_list
    (4) declarations -> . empty
    (12) compound_stmt -> . BEGIN stmt_list END
    (64) empty -> .

  ! shift/reduce conflict for BEGIN resolved as shift
    VAR             shift and go to state 7
    BEGIN           shift and go to state 9

  ! BEGIN           [ reduce using rule 64 (empty -> .) ]

    declarations                   shift and go to state 5
    compound_stmt                  shift and go to state 6
    empty                          shift and go to state 8

state 5

    (1) program -> PROGRAM ID SEMI declarations . compound_stmt DOT
    (12) compound_stmt -> . BEGIN stmt_list END

    BEGIN           shift and go to state 9

    compound_stmt                  shift and go to state 10

state 6

    (2) program -> PROGRAM ID SEMI compound_stmt . DOT

    DOT             shift and go to state 11


state 7

    (3) declarations -> VAR . var_decl_list
    (5) var_decl_list -> . var_decl SEMI
    (6) var_decl_list -> . var_decl SEMI var_decl_list
    (7) var_decl -> . id_list COLON type
    (8) id_list -> . ID
    (9) id_list -> . ID COMMA id_list

    ID              shift and go to state 15

    var_decl_list                  shift and go to state 12
    var_decl                       shift and go to state 13
    id_list                        shift and go to state 14

state 8

    (4) declarations -> empty .

    BEGIN           reduce using rule 4 (declarations -> empty .)


state 9

    (12) compound_stmt -> BEGIN . stmt_list END
    (13) stmt_list -> . stmt
    (14) stmt_list -> . stmt SEMI stmt_list
    (15) stmt -> . assignment
    (16) stmt -> . if_stmt
    (17) stmt -> . while_stmt
    (18) stmt -> . for_stmt
    (19) stmt -> . readln_stmt
    (20) stmt -> . writeln_stmt
    (21) stmt -> . compound_stmt
    (22) stmt -> . empty
    (23) assignment -> . ID ASSIGN expr
    (24) if_stmt -> . IF expr THEN stmt
    (25) if_stmt -> . IF expr THEN stmt ELSE stmt
    (26) while_stmt -> . WHILE expr DO stmt
    (27) for_stmt -> . FOR ID ASSIGN expr TO expr DO stmt
    (28) readln_stmt -> . READLN LPAREN ID RPAREN
    (29) writeln_stmt -> . WRITELN LPAREN writeln_args RPAREN
    (30) writeln_stmt -> . WRITE LPAREN writeln_args RPAREN
    (31) writeln_stmt -> . WRITELN LPAREN RPAREN
    (32) writeln_stmt -> . WRITE LPAREN RPAREN
    (12) compound_stmt -> . BEGIN stmt_list END
    (64) empty -> .

    ID              shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FOR             shift and go to state 29
    READLN          shift and go to state 30
    WRITELN         shift and go to state 31
    WRITE           shift and go to state 32
    BEGIN           shift and go to state 9
    SEMI            reduce using rule 64 (empty -> .)
    END             reduce using rule 64 (empty -> .)

    stmt_list                      shift and go to state 16
    stmt                           shift and go to state 17
    assignment                     shift and go to state 18
    if_stmt                        shift and go to state 19
    while_stmt                     shift and go to state 20
    for_stmt                       shift and go to state 21
    readln_stmt                    shift and go to state 22
    writeln_stmt                   shift and go to state 23
    compound_stmt                  shift and go to state 24
    empty                          shift and go to state 25

state 10

    (1) program -> PROGRAM ID SEMI declarations compound_stmt . DOT

    DOT             shift and go to state 33


state 11

    (2) program -> PROGRAM ID SEMI compound_stmt DOT .

    $end            reduce using rule 2 (program -> PROGRAM ID SEMI compound_stmt DOT .)


state 12

    (3) declarations -> VAR var_decl_list .

    BEGIN           reduce using rule 3 (declarations -> VAR var_decl_list .)


state 13

    (5) var_decl_list -> var_decl . SEMI
    (6) var_decl_list -> var_decl . SEMI var_decl_list

    SEMI            shift and go to state 34


state 14

    (7) var_decl -> id_list . COLON type

    COLON           shift and go to state 35


state 15

    (8) id_list -> ID .
    (9) id_list -> ID . COMMA id_list

    COLON           reduce using rule 8 (id_list -> ID .)
    COMMA           shift and go to state 36


state 16

    (12) compound_stmt -> BEGIN stmt_list . END

    END             shift and go to state 37


state 17

    (13) stmt_list -> stmt .
    (14) stmt_list -> stmt . SEMI stmt_list

    END             reduce using rule 13 (stmt_list -> stmt .)
    SEMI            shift and go to state 38


state 18

    (15) stmt -> assignment .

    SEMI            reduce using rule 15 (stmt -> assignment .)
    END             reduce using rule 15 (stmt -> assignment .)
    ELSE            reduce using rule 15 (stmt -> assignment .)


state 19

    (16) stmt -> if_stmt .

    SEMI            reduce using rule 16 (stmt -> if_stmt .)
    END             reduce using rule 16 (stmt -> if_stmt .)
    ELSE            reduce using rule 16 (stmt -> if_stmt .)


state 20

    (17) stmt -> while_stmt .

    SEMI            reduce using rule 17 (stmt -> while_stmt .)
    END             reduce using rule 17 (stmt -> while_stmt .)
    ELSE            reduce using rule 17 (stmt -> while_stmt .)


state 21

    (18) stmt -> for_stmt .

    SEMI            reduce using rule 18 (stmt -> for_stmt .)
    END             reduce using rule 18 (stmt -> for_stmt .)
    ELSE            reduce using rule 18 (stmt -> for_stmt .)


state 22

    (19) stmt -> readln_stmt .

    SEMI            reduce using rule 19 (stmt -> readln_stmt .)
    END             reduce using rule 19 (stmt -> readln_stmt .)
    ELSE            reduce using rule 19 (stmt -> readln_stmt .)


state 23

    (20) stmt -> writeln_stmt .

    SEMI            reduce using rule 20 (stmt -> writeln_stmt .)
    END             reduce using rule 20 (stmt -> writeln_stmt .)
    ELSE            reduce using rule 20 (stmt -> writeln_stmt .)


state 24

    (21) stmt -> compound_stmt .

    SEMI            reduce using rule 21 (stmt -> compound_stmt .)
    END             reduce using rule 21 (stmt -> compound_stmt .)
    ELSE            reduce using rule 21 (stmt -> compound_stmt .)


state 25

    (22) stmt -> empty .

    SEMI            reduce using rule 22 (stmt -> empty .)
    END             reduce using rule 22 (stmt -> empty .)
    ELSE            reduce using rule 22 (stmt -> empty .)


state 26

    (23) assignment -> ID . ASSIGN expr

    ASSIGN          shift and go to state 39


state 27

    (24) if_stmt -> IF . expr THEN stmt
    (25) if_stmt -> IF . expr THEN stmt ELSE stmt
    (37) expr -> . simple_expr
    (38) expr -> . simple_expr relop simple_expr
    (45) simple_expr -> . term
    (46) simple_expr -> . simple_expr addop term
    (50) term -> . factor
    (51) term -> . term mulop factor
    (57) factor -> . ID
    (58) factor -> . NUMBER
    (59) factor -> . LPAREN expr RPAREN
    (60) factor -> . NOT factor
    (61) factor -> . TRUE
    (62) factor -> . FALSE
    (63) factor -> . MINUS factor

    ID              shift and go to state 44
    NUMBER          shift and go to state 45
    LPAREN          shift and go to state 46
    NOT             shift and go to state 47
    TRUE            shift and go to state 48
    FALSE           shift and go to state 49
    MINUS           shift and go to state 50

    expr                           shift and go to state 40
    simple_expr                    shift and go to state 41
    term                           shift and go to state 42
    factor                         shift and go to state 43

state 28

    (26) while_stmt -> WHILE . expr DO stmt
    (37) expr -> . simple_expr
    (38) expr -> . simple_expr relop simple_expr
    (45) simple_expr -> . term
    (46) simple_expr -> . simple_expr addop term
    (50) term -> . factor
    (51) term -> . term mulop factor
    (57) factor -> . ID
    (58) factor -> . NUMBER
    (59) factor -> . LPAREN expr RPAREN
    (60) factor -> . NOT factor
    (61) factor -> . TRUE
    (62) factor -> . FALSE
    (63) factor -> . MINUS factor

    ID              shift and go to state 44
    NUMBER          shift and go to state 45
    LPAREN          shift and go to state 46
    NOT             shift and go to state 47
    TRUE            shift and go to state 48
    FALSE           shift and go to state 49
    MINUS           shift and go to state 50

    expr                           shift and go to state 51
    simple_expr                    shift and go to state 41
    term                           shift and go to state 42
    factor                         shift and go to state 43

state 29

    (27) for_stmt -> FOR . ID ASSIGN expr TO expr DO stmt

    ID              shift and go to state 52


state 30

    (28) readln_stmt -> READLN . LPAREN ID RPAREN

    LPAREN          shift and go to state 53


state 31

    (29) writeln_stmt -> WRITELN . LPAREN writeln_args RPAREN
    (31) writeln_stmt -> WRITELN . LPAREN RPAREN

    LPAREN          shift and go to state 54


state 32

    (30) writeln_stmt -> WRITE . LPAREN writeln_args RPAREN
    (32) writeln_stmt -> WRITE . LPAREN RPAREN

    LPAREN          shift and go to state 55


state 33

    (1) program -> PROGRAM ID SEMI declarations compound_stmt DOT .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMI declarations compound_stmt DOT .)


state 34

    (5) var_decl_list -> var_decl SEMI .
    (6) var_decl_list -> var_decl SEMI . var_decl_list
    (5) var_decl_list -> . var_decl SEMI
    (6) var_decl_list -> . var_decl SEMI var_decl_list
    (7) var_decl -> . id_list COLON type
    (8) id_list -> . ID
    (9) id_list -> . ID COMMA id_list

    BEGIN           reduce using rule 5 (var_decl_list -> var_decl SEMI .)
    ID              shift and go to state 15

    var_decl                       shift and go to state 13
    var_decl_list                  shift and go to state 56
    id_list                        shift and go to state 14

state 35

    (7) var_decl -> id_list COLON . type
    (10) type -> . INTEGER
    (11) type -> . BOOLEAN

    INTEGER         shift and go to state 58
    BOOLEAN         shift and go to state 59

    type                           shift and go to state 57

state 36

    (9) id_list -> ID COMMA . id_list
    (8) id_list -> . ID
    (9) id_list -> . ID COMMA id_list

    ID              shift and go to state 15

    id_list                        shift and go to state 60

state 37

    (12) compound_stmt -> BEGIN stmt_list END .

    DOT             reduce using rule 12 (compound_stmt -> BEGIN stmt_list END .)
    SEMI            reduce using rule 12 (compound_stmt -> BEGIN stmt_list END .)
    END             reduce using rule 12 (compound_stmt -> BEGIN stmt_list END .)
    ELSE            reduce using rule 12 (compound_stmt -> BEGIN stmt_list END .)


state 38

    (14) stmt_list -> stmt SEMI . stmt_list
    (13) stmt_list -> . stmt
    (14) stmt_list -> . stmt SEMI stmt_list
    (15) stmt -> . assignment
    (16) stmt -> . if_stmt
    (17) stmt -> . while_stmt
    (18) stmt -> . for_stmt
    (19) stmt -> . readln_stmt
    (20) stmt -> . writeln_stmt
    (21) stmt -> . compound_stmt
    (22) stmt -> . empty
    (23) assignment -> . ID ASSIGN expr
    (24) if_stmt -> . IF expr THEN stmt
    (25) if_stmt -> . IF expr THEN stmt ELSE stmt
    (26) while_stmt -> . WHILE expr DO stmt
    (27) for_stmt -> . FOR ID ASSIGN expr TO expr DO stmt
    (28) readln_stmt -> . READLN LPAREN ID RPAREN
    (29) writeln_stmt -> . WRITELN LPAREN writeln_args RPAREN
    (30) writeln_stmt -> . WRITE LPAREN writeln_args RPAREN
    (31) writeln_stmt -> . WRITELN LPAREN RPAREN
    (32) writeln_stmt -> . WRITE LPAREN RPAREN
    (12) compound_stmt -> . BEGIN stmt_list END
    (64) empty -> .

    ID              shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FOR             shift and go to state 29
    READLN          shift and go to state 30
    WRITELN         shift and go to state 31
    WRITE           shift and go to state 32
    BEGIN           shift and go to state 9
    SEMI            reduce using rule 64 (empty -> .)
    END             reduce using rule 64 (empty -> .)

    stmt                           shift and go to state 17
    stmt_list                      shift and go to state 61
    assignment                     shift and go to state 18
    if_stmt                        shift and go to state 19
    while_stmt                     shift and go to state 20
    for_stmt                       shift and go to state 21
    readln_stmt                    shift and go to state 22
    writeln_stmt                   shift and go to state 23
    compound_stmt                  shift and go to state 24
    empty                          shift and go to state 25

state 39

    (23) assignment -> ID ASSIGN . expr
    (37) expr -> . simple_expr
    (38) expr -> . simple_expr relop simple_expr
    (45) simple_expr -> . term
    (46) simple_expr -> . simple_expr addop term
    (50) term -> . factor
    (51) term -> . term mulop factor
    (57) factor -> . ID
    (58) factor -> . NUMBER
    (59) factor -> . LPAREN expr RPAREN
    (60) factor -> . NOT factor
    (61) factor -> . TRUE
    (62) factor -> . FALSE
    (63) factor -> . MINUS factor

    ID              shift and go to state 44
    NUMBER          shift and go to state 45
    LPAREN          shift and go to state 46
    NOT             shift and go to state 47
    TRUE            shift and go to state 48
    FALSE           shift and go to state 49
    MINUS           shift and go to state 50

    expr                           shift and go to state 62
    simple_expr                    shift and go to state 41
    term                           shift and go to state 42
    factor                         shift and go to state 43

state 40

    (24) if_stmt -> IF expr . THEN stmt
    (25) if_stmt -> IF expr . THEN stmt ELSE stmt

    THEN            shift and go to state 63


state 41

    (37) expr -> simple_expr .
    (38) expr -> simple_expr . relop simple_expr
    (46) simple_expr -> simple_expr . addop term
    (39) relop -> . EQUAL
    (40) relop -> . NOTEQUAL
    (41) relop -> . LT
    (42) relop -> . GT
    (43) relop -> . LE
    (44) relop -> . GE
    (47) addop -> . PLUS
    (48) addop -> . MINUS
    (49) addop -> . OR

    THEN            reduce using rule 37 (expr -> simple_expr .)
    DO              reduce using rule 37 (expr -> simple_expr .)
    SEMI            reduce using rule 37 (expr -> simple_expr .)
    END             reduce using rule 37 (expr -> simple_expr .)
    ELSE            reduce using rule 37 (expr -> simple_expr .)
    RPAREN          reduce using rule 37 (expr -> simple_expr .)
    COMMA           reduce using rule 37 (expr -> simple_expr .)
    TO              reduce using rule 37 (expr -> simple_expr .)
    EQUAL           shift and go to state 66
    NOTEQUAL        shift and go to state 67
    LT              shift and go to state 68
    GT              shift and go to state 69
    LE              shift and go to state 70
    GE              shift and go to state 71
    PLUS            shift and go to state 72
    MINUS           shift and go to state 73
    OR              shift and go to state 74

    relop                          shift and go to state 64
    addop                          shift and go to state 65

state 42

    (45) simple_expr -> term .
    (51) term -> term . mulop factor
    (52) mulop -> . TIMES
    (53) mulop -> . DIVIDE
    (54) mulop -> . DIV
    (55) mulop -> . MOD
    (56) mulop -> . AND
